[WiP] Challenge 1 complete

--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -845,13 +845,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15635089013928605"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "#badass = 'Varies with device'\n",
-    "#google_play[google_play.Size == badass].shape[0]/google_play.shape[0]\n"
+    "badass = google_play[\"Size\"].loc[google_play[\"Size\"].str.contains(\"Varies\") == True].count() \n",
+    "badass / len(google_play)"
    ]
   },
   {
@@ -867,11 +878,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.drop(labels = [\"Size\"], inplace = True, axis = 1)"
    ]
   },
   {
@@ -887,11 +899,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "App                   0\n",
+       "Category              0\n",
+       "Rating             1474\n",
+       "Reviews               0\n",
+       "Installs              0\n",
+       "Type                  1\n",
+       "Price                 0\n",
+       "Content Rating        1\n",
+       "Genres                0\n",
+       "Last Updated          0\n",
+       "Current Ver           8\n",
+       "Android Ver           3\n",
+       "Reviews_numeric       1\n",
+       "Reviews_isnull        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_play.isna().sum()"
    ]
   },
   {
@@ -907,11 +945,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "By Column:\n",
+      " 13.600000000000001\n",
+      "\n",
+      "By Total(..?): 0.01\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "# different ways to check the % of nulls in a df/series\n",
+    "print(\"By Column:\\n\", google_play[\"Rating\"].isna().mean().round(4) * 100)\n",
+    "print(\"\\nBy Total(..?):\", round((google_play[\"Rating\"].isnull().any().sum() / len(google_play[\"Rating\"])) * 100, 2))"
    ]
   },
   {
@@ -933,11 +985,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed = google_play.dropna(axis = \"index\")"
    ]
   },
   {
@@ -953,11 +1006,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "App                        object\n",
+       "Category                   object\n",
+       "Rating                    float64\n",
+       "Reviews                   float64\n",
+       "Installs                   object\n",
+       "Type                       object\n",
+       "Price                      object\n",
+       "Content Rating             object\n",
+       "Genres                     object\n",
+       "Last Updated       datetime64[ns]\n",
+       "Current Ver                object\n",
+       "Android Ver                object\n",
+       "Reviews_numeric           float64\n",
+       "Reviews_isnull               bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Last Updated\"] = pd.to_datetime(google_missing_removed['Last Updated'])\n",
+    "\n",
+    "google_missing_removed.dtypes"
    ]
   },
   {
@@ -971,11 +1064,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0', '$4.99', '$3.99', '$6.99', '$7.99', '$5.99', '$2.99', '$3.49',\n",
+       "       '$1.99', '$9.99', '$7.49', '$0.99', '$9.00', '$5.49', '$10.00',\n",
+       "       '$24.99', '$11.99', '$79.99', '$16.99', '$14.99', '$29.99',\n",
+       "       '$12.99', '$2.49', '$10.99', '$1.50', '$19.99', '$15.99', '$33.99',\n",
+       "       '$39.99', '$3.95', '$4.49', '$1.70', '$8.99', '$1.49', '$3.88',\n",
+       "       '$399.99', '$17.99', '$400.00', '$3.02', '$1.76', '$4.84', '$4.77',\n",
+       "       '$1.61', '$2.50', '$1.59', '$6.49', '$1.29', '$299.99', '$379.99',\n",
+       "       '$37.99', '$18.99', '$389.99', '$8.49', '$1.75', '$14.00', '$2.00',\n",
+       "       '$3.08', '$2.59', '$19.40', '$3.90', '$4.59', '$15.46', '$3.04',\n",
+       "       '$13.99', '$4.29', '$3.28', '$4.60', '$1.00', '$2.95', '$2.90',\n",
+       "       '$1.97', '$2.56', '$1.20'], dtype=object)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price\"].unique()"
    ]
   },
   {
@@ -991,11 +1106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price Numerical\"] = google_missing_removed[\"Price\"].str.replace(\"$\", \n",
+    "                                                                                        \"\")"
    ]
   },
   {
@@ -1007,11 +1137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed[\"Price Numerical\"] = pd.to_numeric(google_missing_removed[\"Price Numerical\"], \n",
+    "                                                          errors = \"coerce\")"
    ]
   },
   {
@@ -1023,11 +1168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4102: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errors=errors,\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_missing_removed.drop(labels = \"Price\", axis = 1, inplace = True)"
    ]
   },
   {
@@ -1043,11 +1201,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "App                        object\n",
+       "Category                   object\n",
+       "Rating                    float64\n",
+       "Reviews                   float64\n",
+       "Installs                   object\n",
+       "Type                       object\n",
+       "Content Rating             object\n",
+       "Genres                     object\n",
+       "Last Updated       datetime64[ns]\n",
+       "Current Ver                object\n",
+       "Android Ver                object\n",
+       "Reviews_numeric           float64\n",
+       "Reviews_isnull               bool\n",
+       "Price Numerical           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "# it also has Reviews_numeric as float64; should it have been removed?\n",
+    "google_missing_removed.dtypes"
    ]
   },
   {
