--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -1251,11 +1251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_reviews = pd.read_csv(directory + \"googleplaystore_user_reviews.csv\")"
    ]
   },
   {
@@ -1269,11 +1270,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Translated_Review</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Sentiment_Polarity</th>\n",
+       "      <th>Sentiment_Subjectivity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>I like eat delicious food. That's I'm cooking ...</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.533333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>This help eating healthy exercise regular basis</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.288462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Works great especially going grocery store</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Best idea us</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     App                                  Translated_Review  \\\n",
+       "0  10 Best Foods for You  I like eat delicious food. That's I'm cooking ...   \n",
+       "1  10 Best Foods for You    This help eating healthy exercise regular basis   \n",
+       "2  10 Best Foods for You                                                NaN   \n",
+       "3  10 Best Foods for You         Works great especially going grocery store   \n",
+       "4  10 Best Foods for You                                       Best idea us   \n",
+       "\n",
+       "  Sentiment  Sentiment_Polarity  Sentiment_Subjectivity  \n",
+       "0  Positive                1.00                0.533333  \n",
+       "1  Positive                0.25                0.288462  \n",
+       "2       NaN                 NaN                     NaN  \n",
+       "3  Positive                0.40                0.875000  \n",
+       "4  Positive                1.00                0.300000  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "google_reviews.head()"
    ]
   },
   {
@@ -1300,11 +1396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed = google_reviews.dropna()"
    ]
   },
   {
@@ -1316,11 +1413,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bowmasters                                 312\n",
+       "Helix Jump                                 273\n",
+       "Angry Birds Classic                        273\n",
+       "Calorie Counter - MyFitnessPal             254\n",
+       "Candy Crush Saga                           240\n",
+       "                                          ... \n",
+       "GPS Map Free                                 1\n",
+       "Bed Time Fan - White Noise Sleep Sounds      1\n",
+       "All-in-One Mahjong 3 FREE                    1\n",
+       "Fruit Block - Puzzle Legend                  1\n",
+       "Apartment Decorating Ideas                   1\n",
+       "Name: App, Length: 865, dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "review_missing_removed[\"App\"].value_counts()"
    ]
   },
   {
@@ -1349,9 +1469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code below\n",
     "\n",
@@ -1365,7 +1496,9 @@
     "    Returns:\n",
     "        The number of occurrences of `Positive` in the column data.\n",
     "    \"\"\"\n",
-    "    return 0"
+    "    return x.str.contains(\"Positive\").sum()\n",
+    "\n",
+    "positive_function(review_missing_removed[\"Sentiment\"])"
    ]
   },
   {
@@ -1389,11 +1522,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg = review_missing_removed.groupby(\"App\").agg(\\\n",
+    "                                                       Positive = (\"Sentiment\", \n",
+    "                                                                   positive_function), \n",
+    "                                                       Total = (\"App\", \"count\"))"
    ]
   },
   {
@@ -1405,11 +1542,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</td>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11st</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1800 Contacts - Lens Store</td>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1LINE – One Line with One Touch</td>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive  Total\n",
+       "App                                              \n",
+       "10 Best Foods for You                  162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
+       "11st                                    23     39\n",
+       "1800 Contacts - Lens Store              64     80\n",
+       "1LINE – One Line with One Touch         27     38"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1423,11 +1636,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg[\"Positive Ratio\"] = np.where(google_agg[\"Total\"] != 0, \n",
+    "                                        google_agg[\"Positive\"] / google_agg[\"Total\"], 0)"
    ]
   },
   {
@@ -1439,11 +1654,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg.drop(labels = [\"Total\", \"Positive\"], axis = 1, inplace = True)"
    ]
   },
   {
@@ -1457,11 +1673,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</td>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11st</td>\n",
+       "      <td>0.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1800 Contacts - Lens Store</td>\n",
+       "      <td>0.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1LINE – One Line with One Touch</td>\n",
+       "      <td>0.710526</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Positive Ratio\n",
+       "App                                             \n",
+       "10 Best Foods for You                   0.835052\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        0.775000\n",
+       "11st                                    0.589744\n",
+       "1800 Contacts - Lens Store              0.800000\n",
+       "1LINE – One Line with One Touch         0.710526"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google_agg.head()"
    ]
   },
   {
