--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -1762,11 +1762,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "google = google_missing_removed.merge(google_agg, on = \"App\", how = \"inner\")"
    ]
   },
   {
@@ -1780,12 +1781,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Installs</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Content Rating</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Last Updated</th>\n",
+       "      <th>Current Ver</th>\n",
+       "      <th>Android Ver</th>\n",
+       "      <th>Reviews_numeric</th>\n",
+       "      <th>Reviews_isnull</th>\n",
+       "      <th>Price Numerical</th>\n",
+       "      <th>Positive Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>FAMILY</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>974.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>974.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Garden Coloring Book</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>13791.0</td>\n",
+       "      <td>1,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2017-09-20</td>\n",
+       "      <td>2.9.2</td>\n",
+       "      <td>3.0 and up</td>\n",
+       "      <td>13791.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.711111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>FlipaClip - Cartoon animation</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>194216.0</td>\n",
+       "      <td>5,000,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-08-03</td>\n",
+       "      <td>2.2.5</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>194216.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Boys Photo Editor - Six Pack &amp; Men's Suit</td>\n",
+       "      <td>ART_AND_DESIGN</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>100,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design</td>\n",
+       "      <td>2018-03-20</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.605263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         App        Category  Rating  \\\n",
+       "0                        Coloring book moana  ART_AND_DESIGN     3.9   \n",
+       "1                        Coloring book moana          FAMILY     3.9   \n",
+       "2                       Garden Coloring Book  ART_AND_DESIGN     4.4   \n",
+       "3              FlipaClip - Cartoon animation  ART_AND_DESIGN     4.3   \n",
+       "4  Boys Photo Editor - Six Pack & Men's Suit  ART_AND_DESIGN     4.1   \n",
+       "\n",
+       "    Reviews    Installs  Type Content Rating                     Genres  \\\n",
+       "0     967.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "1     974.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "2   13791.0  1,000,000+  Free       Everyone               Art & Design   \n",
+       "3  194216.0  5,000,000+  Free       Everyone               Art & Design   \n",
+       "4     654.0    100,000+  Free       Everyone               Art & Design   \n",
+       "\n",
+       "  Last Updated Current Ver   Android Ver  Reviews_numeric  Reviews_isnull  \\\n",
+       "0   2018-01-15       2.0.0  4.0.3 and up            967.0           False   \n",
+       "1   2018-01-15       2.0.0  4.0.3 and up            974.0           False   \n",
+       "2   2017-09-20       2.9.2    3.0 and up          13791.0           False   \n",
+       "3   2018-08-03       2.2.5  4.0.3 and up         194216.0           False   \n",
+       "4   2018-03-20         1.1  4.0.3 and up            654.0           False   \n",
+       "\n",
+       "   Price Numerical  Positive Ratio  \n",
+       "0              0.0        0.590909  \n",
+       "1              0.0        0.590909  \n",
+       "2              0.0        0.711111  \n",
+       "3              0.0        1.000000  \n",
+       "4              0.0        0.605263  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "google.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
