--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "4    4.4 and up  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "Name: Reviews, Length: 10841, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "Name: Reviews, Length: 10841, dtype: bool"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "10472       1.0.19  4.0 and up         NaN  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,26 +472,6 @@
     "# Your code here:\n",
     "\n",
     "google_play[(Reviews_isnull == True)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['159', '967', '87510', ..., '603', '1195', '398307'], dtype=object)"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "google_play['Reviews'].unique()"
    ]
   },
   {
@@ -511,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +500,7 @@
        "True"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +552,7 @@
        "4100000.0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +754,7 @@
        "4    4.4 and up  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +795,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +882,7 @@
        "       '619k'], dtype=object)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +988,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1028,7 @@
        "0.13596531685268887"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1104,7 @@
        "Name: Last Updated, Length: 9360, dtype: object"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1159,7 @@
        "Name: Last Updated, Length: 9360, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1198,7 @@
        "       '$1.97', '$2.56', '$1.20'], dtype=object)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1264,7 @@
        "       '2.95', '2.90', '1.97', '2.56', '1.20'], dtype=object)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1368,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1508,7 @@
        "4  Positive                1.00                0.300000  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1581,7 @@
        "Name: App, Length: 865, dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,9 +1618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code below\n",
     "\n",
@@ -1654,10 +1645,62 @@
     "    Returns:\n",
     "        The number of occurrences of `Positive` in the column data.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    return 0"
+    "    # define the condition\n",
+    "    condition = x == 'Positive'\n",
+    "    # get indices where condition applies\n",
+    "    positive_indices = np.where(condition)\n",
+    "    # count indices\n",
+    "    positive_count = len(positive_indices[0])\n",
+    "    return positive_count\n",
+    "\n",
+    "positive_function(review_missing_removed['Sentiment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23998"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing the logic \n",
+    "condition = review_missing_removed['Sentiment'] == 'Positive'\n",
+    "positive_indices = np.where(condition)\n",
+    "positive_count = len(positive_indices[0])\n",
+    "positive_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Positive    23998\n",
+       "Negative     8271\n",
+       "Neutral      5158\n",
+       "Name: Sentiment, dtype: int64"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_missing_removed['Sentiment'].value_counts()"
    ]
   },
   {
@@ -1681,11 +1724,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Link to documentation does not work, 404 Not Found\n",
+    "# https://pandas.pydata.org/pandas-docs/version/0.22.0/generated/pandas.core.groupby.DataFrameGroupBy.agg.html\n",
+    "\n",
+    "google_agg = review_missing_removed.groupby('App').agg({ 'Sentiment' : [(lambda x : positive_function(x)), 'count'] })\n",
+    "\n",
+    "# remove multi index (columns)\n",
+    "google_agg.columns = google_agg.columns.droplevel(0)\n",
+    "\n",
+    "# review_missing_removed['Sentiment']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SpecificationError",
+     "evalue": "nested renamer is not supported",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mSpecificationError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-232-8e002853d177>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     }\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mgoogle_agg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreview_missing_removed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'App'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maggregations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/pandas/core/groupby/generic.py\u001b[0m in \u001b[0;36maggregate\u001b[0;34m(self, func, *args, **kwargs)\u001b[0m\n\u001b[1;32m    938\u001b[0m         \u001b[0mfunc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_maybe_mangle_lambdas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    939\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 940\u001b[0;31m         \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_aggregate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    941\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    942\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36m_aggregate\u001b[0;34m(self, arg, *args, **kwargs)\u001b[0m\n\u001b[1;32m    349\u001b[0m                     \u001b[0;31m# {'ra' : { 'A' : 'mean' }}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 351\u001b[0;31m                         \u001b[0;32mraise\u001b[0m \u001b[0mSpecificationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nested renamer is not supported\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    352\u001b[0m                     \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mABCSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    353\u001b[0m                         \u001b[0;32mraise\u001b[0m \u001b[0mSpecificationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nested renamer is not supported\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSpecificationError\u001b[0m: nested renamer is not supported"
+     ]
+    }
+   ],
+   "source": [
+    "aggregations = {\n",
+    "    'Sentiment': {\n",
+    "        'Positive': (lambda x : positive_function(x)),       \n",
+    "        'Total': 'count' }\n",
+    "    }\n",
+    "\n",
+    "google_agg = review_missing_removed.groupby('App').agg(aggregations)\n"
    ]
   },
   {
@@ -1697,11 +1777,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>&lt;lambda_0&gt;</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10 Best Foods for You</th>\n",
+       "      <td>162</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</th>\n",
+       "      <td>31</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11st</th>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1800 Contacts - Lens Store</th>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1LINE – One Line with One Touch</th>\n",
+       "      <td>27</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  <lambda_0>  count\n",
+       "App                                                \n",
+       "10 Best Foods for You                    162    194\n",
+       "104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室          31     40\n",
+       "11st                                      23     39\n",
+       "1800 Contacts - Lens Store                64     80\n",
+       "1LINE – One Line with One Touch           27     38"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "google_agg.head()"
    ]
   },
   {
@@ -1719,7 +1876,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n"
    ]
   },
   {
@@ -1773,7 +1931,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "google = "
    ]
   },
   {
