--- a/your-code/notebooks/main.ipynb
+++ b/your-code/notebooks/main.ipynb
@@ -1520,17 +1520,17 @@
     {
      "data": {
       "text/plain": [
-       "Bowmasters                                            312\n",
-       "Helix Jump                                            273\n",
-       "Angry Birds Classic                                   273\n",
-       "Calorie Counter - MyFitnessPal                        255\n",
-       "Duolingo: Learn Languages Free                        240\n",
-       "                                                     ... \n",
-       "Best Ovulation Tracker Fertility Calendar App Glow      1\n",
-       "GPS Map Free                                            1\n",
-       "Google Slides                                           1\n",
-       "Best Fiends - Free Puzzle Game                          1\n",
-       "Calendar+ Schedule Planner App                          1\n",
+       "Bowmasters                                 312\n",
+       "Angry Birds Classic                        273\n",
+       "Helix Jump                                 273\n",
+       "Calorie Counter - MyFitnessPal             255\n",
+       "Candy Crush Saga                           240\n",
+       "                                          ... \n",
+       "Calendar+ Schedule Planner App               1\n",
+       "Draw a Stickman: EPIC 2                      1\n",
+       "Draw In                                      1\n",
+       "Draw A Stickman                              1\n",
+       "Bed Time Fan - White Noise Sleep Sounds      1\n",
        "Name: App, Length: 865, dtype: int64"
       ]
      },
@@ -1614,129 +1614,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>App</th>\n",
-       "      <th>Positive</th>\n",
-       "      <th>Total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10 Best Foods for You</td>\n",
-       "      <td>162</td>\n",
-       "      <td>194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室</td>\n",
-       "      <td>31</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11st</td>\n",
-       "      <td>23</td>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1800 Contacts - Lens Store</td>\n",
-       "      <td>64</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1LINE – One Line with One Touch</td>\n",
-       "      <td>27</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>Hotels.com: Book Hotel Rooms &amp; Find Vacation D...</td>\n",
-       "      <td>39</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>861</th>\n",
-       "      <td>Hotspot Shield Free VPN Proxy &amp; Wi-Fi Security</td>\n",
-       "      <td>17</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>862</th>\n",
-       "      <td>Hotstar</td>\n",
-       "      <td>14</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>863</th>\n",
-       "      <td>Hotwire Hotel &amp; Car Rental App</td>\n",
-       "      <td>16</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>864</th>\n",
-       "      <td>Housing-Real Estate &amp; Property</td>\n",
-       "      <td>8</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>865 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   App  Positive  Total\n",
-       "0                                10 Best Foods for You       162    194\n",
-       "1                     104 找工作 - 找工作 找打工 找兼職 履歷健檢 履歷診療室        31     40\n",
-       "2                                                 11st        23     40\n",
-       "3                           1800 Contacts - Lens Store        64     80\n",
-       "4                      1LINE – One Line with One Touch        27     38\n",
-       "..                                                 ...       ...    ...\n",
-       "860  Hotels.com: Book Hotel Rooms & Find Vacation D...        39     68\n",
-       "861     Hotspot Shield Free VPN Proxy & Wi-Fi Security        17     34\n",
-       "862                                            Hotstar        14     32\n",
-       "863                     Hotwire Hotel & Car Rental App        16     33\n",
-       "864                     Housing-Real Estate & Property         8     21\n",
-       "\n",
-       "[865 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here:\n",
     "google_agg = pd.DataFrame()\n",
@@ -1754,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1707,7 @@
        "4   1LINE – One Line with One Touch        27     38"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1865,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1831,7 @@
        "4   1LINE – One Line with One Touch        0.710526"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,12 +1854,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "google = google_missing_removed.join(google_agg.set_index('App'),on='App')"
+    "google = google_missing_removed.join(google_agg.set_index('App'),on='App', how='inner')"
    ]
   },
   {
@@ -1993,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2039,6 +1919,22 @@
        "      <td>ART_AND_DESIGN</td>\n",
        "      <td>3.9</td>\n",
        "      <td>967.0</td>\n",
+       "      <td>500,000+</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Art &amp; Design;Pretend Play</td>\n",
+       "      <td>2018-01-15</td>\n",
+       "      <td>2.0.0</td>\n",
+       "      <td>4.0.3 and up</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.590909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2033</th>\n",
+       "      <td>Coloring book moana</td>\n",
+       "      <td>FAMILY</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>974.0</td>\n",
        "      <td>500,000+</td>\n",
        "      <td>Free</td>\n",
        "      <td>Everyone</td>\n",
@@ -2097,57 +1993,40 @@
        "      <td>0.0</td>\n",
        "      <td>0.605263</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Colorfit - Drawing &amp; Coloring</td>\n",
-       "      <td>ART_AND_DESIGN</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>20260.0</td>\n",
-       "      <td>500,000+</td>\n",
-       "      <td>Free</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>Art &amp; Design;Creativity</td>\n",
-       "      <td>2017-10-11</td>\n",
-       "      <td>1.0.8</td>\n",
-       "      <td>4.0.3 and up</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.763158</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          App        Category  Rating  \\\n",
-       "1                         Coloring book moana  ART_AND_DESIGN     3.9   \n",
-       "8                        Garden Coloring Book  ART_AND_DESIGN     4.4   \n",
-       "18              FlipaClip - Cartoon animation  ART_AND_DESIGN     4.3   \n",
-       "21  Boys Photo Editor - Six Pack & Men's Suit  ART_AND_DESIGN     4.1   \n",
-       "26              Colorfit - Drawing & Coloring  ART_AND_DESIGN     4.7   \n",
+       "                                            App        Category  Rating  \\\n",
+       "1                           Coloring book moana  ART_AND_DESIGN     3.9   \n",
+       "2033                        Coloring book moana          FAMILY     3.9   \n",
+       "8                          Garden Coloring Book  ART_AND_DESIGN     4.4   \n",
+       "18                FlipaClip - Cartoon animation  ART_AND_DESIGN     4.3   \n",
+       "21    Boys Photo Editor - Six Pack & Men's Suit  ART_AND_DESIGN     4.1   \n",
        "\n",
-       "     Reviews    Installs  Type Content Rating                     Genres  \\\n",
-       "1      967.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
-       "8    13791.0  1,000,000+  Free       Everyone               Art & Design   \n",
-       "18  194216.0  5,000,000+  Free       Everyone               Art & Design   \n",
-       "21     654.0    100,000+  Free       Everyone               Art & Design   \n",
-       "26   20260.0    500,000+  Free       Everyone    Art & Design;Creativity   \n",
+       "       Reviews    Installs  Type Content Rating                     Genres  \\\n",
+       "1        967.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "2033     974.0    500,000+  Free       Everyone  Art & Design;Pretend Play   \n",
+       "8      13791.0  1,000,000+  Free       Everyone               Art & Design   \n",
+       "18    194216.0  5,000,000+  Free       Everyone               Art & Design   \n",
+       "21       654.0    100,000+  Free       Everyone               Art & Design   \n",
        "\n",
-       "   Last Updated Current Ver   Android Ver  Price Numerical  Positive Ratio  \n",
-       "1    2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
-       "8    2017-09-20       2.9.2    3.0 and up              0.0        0.711111  \n",
-       "18   2018-08-03       2.2.5  4.0.3 and up              0.0        1.000000  \n",
-       "21   2018-03-20         1.1  4.0.3 and up              0.0        0.605263  \n",
-       "26   2017-10-11       1.0.8  4.0.3 and up              0.0        0.763158  "
+       "     Last Updated Current Ver   Android Ver  Price Numerical  Positive Ratio  \n",
+       "1      2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "2033   2018-01-15       2.0.0  4.0.3 and up              0.0        0.590909  \n",
+       "8      2017-09-20       2.9.2    3.0 and up              0.0        0.711111  \n",
+       "18     2018-08-03       2.2.5  4.0.3 and up              0.0        1.000000  \n",
+       "21     2018-03-20         1.1  4.0.3 and up              0.0        0.605263  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "google = google[google['Positive Ratio'].notna()]\n",
     "google.head()"
    ]
   }
